Update primary color

--- a/src/App.scss
+++ b/src/App.scss
@@ -170,10 +170,10 @@ li {
   }
   .ant-menu-item:active,
   .ant-menu-submenu-title:active {
-    background: #f7cc15;
+    background: #3899b1;
   }
   .ant-menu:not(.ant-menu-horizontal) .ant-menu-item-selected {
-    background-color: #f7cc15;
+    background-color: #3899b1;
   }
   .ant-menu-vertical .ant-menu-item::after,
   .ant-menu-vertical-left .ant-menu-item::after,
