Update side bar & header color

--- a/src/App.scss
+++ b/src/App.scss
@@ -46,7 +46,11 @@ body {
 }
 
 .ant-layout-header {
-  background: #fff;
+  background: #fafafa !important;
+}
+
+.ant-layout-sider-trigger {
+  background-color: #3899b1 !important;
 }
 
 .input-failed {
